maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:17: error: reassignment to val
      virage=virage-1
            ^PledgeMaze:24: error: reassignment to val
    virage=virage+1
          ^